<resources>
    <string name="app_name">Visit Blitar</string>
    <string name="app_version">App Version %s</string>
    <string name="scanqr">Scan QR</string>
    <string name="reservation">Reservasi</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wisata">- Wisata -</string>
    <string name="address_tourist">Lokasi Wisata</string>
    <string name="name_tourist_attraction">Nama Wisata</string>
    <string name="ticket_reservation">Reservasi Tiket</string>
    <string name="search_wisata">Telusuri Tempat Wisata Favoritmu...</string>
    <string name="htm_tourist_attraction">HTM : %s</string>
    <string name="capasity_tourist_attraction">Kapasitas : %s orang</string>
    <string name="visitors_tourist_attraction">Pengunjung : %s pengunjung</string>
    <string name="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque labore eligendi qui maxime accusamus reprehenderit earum iste, culpa eveniet veritatis placeat impedit, harum obcaecati saepe. Vel minus esse quo similique!</string>
    <string name="send_reservation">Pesan Tiket Anda</string>
    <string name="price_total_ticket">Total Harga</string>
    <string name="rupiah">Rp. %s</string>
    <string name="price">Harga Tiket</string>
    <string name="harga_tiket">Harga Tiket : %s</string>
    <string name="login">Masuk</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register_account">Buat Akun</string>
    <string name="firstname">Nama Depan</string>
    <string name="last_name">Nama Belakang</string>
    <string name="username">Username</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="please_wait">Please Wait...</string>
    <string name="ticket">Tiket</string>
    <string name="total_visitor">Jumlah : %s orang</string>
    <string name="status_is_coming">Status : %s</string>
    <string name="date">Tanggal : %s</string>
    <string name="yet_coming">Belum Datang</string>
    <string name="have_arrived">Sudah Datang</string>
    <string name="tanggal">Tanggal</string>
    <string name="datang">Datang</string>
    <string name="find_tourist_attraction">Cari \nTempat Wisata!</string>
    <string name="recommended_for_you">Rekomendasi untuk Anda</string>
    <string name="description_title">Deskripsi</string>
    <string name="reservation_now">Reservasi\nTempat Wisata!</string>
    <string name="search_reservation">Cari Wisata dan Reservasi Sekarang</string>
    <string name="my_ticket">Tiket\nReservasi</string>
    <string name="nama">Nama</string>
    <string name="no_telp">No. Telp</string>
    <string name="nik">NIK</string>
    <string name="total_visitor_text">Total Pengunjung</string>
    <string name="goodbye">Pulang</string>
    <string name="title">Title</string>
    <string name="message_dialog">Message Dialog</string>
    <string name="to_login_page">Ke Halaman Login</string>
    <string name="back">Kembali</string>
    <string name="warning">Pemberitahuan</string>
    <string name="please_login">Silahkan login terlebih dahulu!</string>
    <string name="logout">Keluar</string>
    <string name="hay_username">Halo, %s</string>
    <string name="you_have_not_ticket">Anda belum memiliki tiket</string>
    <string name="title_reservation">reservation</string>
    <string name="title_ticket">ticket</string>
</resources>