<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mufiid.visitblitar.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_my_ticket"
        android:name="com.mufiid.visitblitar.ui.ticket.TicketFragment"
        android:label="@string/ticket"
        tools:layout="@layout/fragment_ticket" />

    <fragment
        android:id="@+id/nav_reservation"
        android:name="com.mufiid.reservation.ui.reservation.ReservationFragment"
        android:label="@string/reservation"
        tools:layout="@layout/fragment_reservation" />

</navigation>