<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.dialog.DialogMessageFragment">

    <TextView
        android:id="@+id/title_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textStyle="bold"
        style="@style/TextViewTheme.Bold"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:text="@string/message_dialog" />

    <Button
        android:id="@+id/btn_to_login_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_marginTop="40dp"
        android:padding="16dp"
        android:background="@drawable/background_button_rounded"
        android:textColor="@color/colorWhite"
        android:text="@string/to_login_page" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:padding="16dp"
        android:background="@null"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/back" />

</LinearLayout>