<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/container"
    android:padding="12dp">
    <ImageView
        android:id="@+id/image_tourist"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_ticket_red"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="12dp"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_tourist_attraction"
            style="@style/TextViewTheme.Bold"
            android:textColor="@color/colorPrimaryText" />
        <TextView
            android:id="@+id/total_visitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_visitor"
            android:textColor="@color/colorPrimaryDark" />
        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/colorPrimaryDark" />
        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_is_coming"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

</LinearLayout>