<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.profiledialog.ProfileDialogFragment">


    <TextView
        android:id="@+id/title_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/hay_username" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:padding="16dp"
        android:background="@drawable/background_button_rounded"
        android:layout_marginTop="40dp"
        android:textColor="@color/colorWhite"
        android:text="@string/login" />

    <Button
        android:id="@+id/button_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:padding="16dp"
        android:background="@null"
        android:layout_marginTop="40dp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/logout" />
</LinearLayout>